--- a/plugin.xml
+++ b/plugin.xml
@@ -72,15 +72,10 @@
         <resource-file src="src/ios/GMImagePicker/GMVideoIcon.png" />
         <resource-file src="src/ios/GMImagePicker/GMVideoIcon@2x.png" />
 
-        <resource-file src="src/ios/GMImagePicker/ca.lproj" />
-        <resource-file src="src/ios/GMImagePicker/de.lproj" />
-        <resource-file src="src/ios/GMImagePicker/en.lproj" />
-        <resource-file src="src/ios/GMImagePicker/es.lproj" />
-        <resource-file src="src/ios/GMImagePicker/fr.lproj" />
-        <resource-file src="src/ios/GMImagePicker/it.lproj" />
-        <resource-file src="src/ios/GMImagePicker/pt.lproj" />
-        <resource-file src="src/ios/GMImagePicker/pl.lproj" />
-        <resource-file src="src/ios/GMImagePicker/zh-Hans.lproj" />
+        <resource-file src="src/ios/GMImagePicker/de.lproj/GMImagePicker.strings" target="de.lproj/GMImagePicker.strings" />
+        <resource-file src="src/ios/GMImagePicker/en.lproj/GMImagePicker.strings" target="en.lproj/GMImagePicker.strings" />
+        <resource-file src="src/ios/GMImagePicker/es.lproj/GMImagePicker.strings" target="es.lproj/GMImagePicker.strings" />
+        <resource-file src="src/ios/GMImagePicker/pl.lproj/GMImagePicker.strings" target="pl.lproj/GMImagePicker.strings" />
 
         <framework src="Accelerate.framework" />
         <framework src="Security.framework" />
